2010-04-23  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Yury Semikhatsky.

        WebInspector: Flaky Inspector tests.
        https://bugs.webkit.org/show_bug.cgi?id=36217

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::didCommitLoad):

Canonical link: https://commits.webkit.org/49442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58162 268f45cc-cd09-0410-ab3c-d52691b4dbfc